--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
+    "semantic-ui": "^2.2.4",
     "superagent": "^2.3.0"
   }
 }
